--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,27 +1,26 @@
 [versions]
-androidx-lifecycle = "2.7.0"
-hilt = "2.48"
-kotlin = "1.9.23"
-kotlinx-coroutines = "1.8.0"
+androidx-lifecycle = "2.8.3"
+hilt = "2.51.1"
+kotlin = "2.0.0"
+kotlinx-coroutines = "1.8.1"
 
 [libraries]
 #noinspection GradleDependency
 android-desugar = "com.android.tools:desugar_jdk_libs:1.1.5"
-android-material = "com.google.android.material:material:1.11.0"
+android-material = "com.google.android.material:material:1.12.0"
 
 androidx-activity-compose = "androidx.activity:activity-compose:1.9.0"
-androidx-appcompat = "androidx.appcompat:appcompat:1.6.1"
+androidx-appcompat = "androidx.appcompat:appcompat:1.7.0"
 androidx-constraint-layout = "androidx.constraintlayout:constraintlayout:2.1.4"
-androidx-core-ktx = "androidx.core:core-ktx:1.13.0"
-androidx-fragment-ktx = "androidx.fragment:fragment-ktx:1.6.2"
+androidx-core-ktx = "androidx.core:core-ktx:1.13.1"
+androidx-fragment-ktx = "androidx.fragment:fragment-ktx:1.8.1"
 androidx-preference-ktx = "androidx.preference:preference-ktx:1.2.1"
 androidx-recyclerview = "androidx.recyclerview:recyclerview:1.3.2"
 #noinspection GradleDependency
 androidx-security-crypto = "androidx.security:security-crypto:1.1.0-alpha04"
 
-androidx-compose-bom = "androidx.compose:compose-bom:2024.04.01"
+androidx-compose-bom = "androidx.compose:compose-bom:2024.06.00"
 androidx-compose-animation = { group = "androidx.compose.animation", name = "animation" }
-androidx-compose-compiler = { group = "androidx.compose.compiler", name = "compiler", version = "1.5.12" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime" }
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui" }
@@ -38,11 +37,13 @@ androidx-lifecycle-service = { module = "androidx.lifecycle:lifecycle-service", 
 androidx-lifecycle-process = { module = "androidx.lifecycle:lifecycle-process", version.ref = "androidx-lifecycle" }
 
 androidx-test-core = "junit:junit:4.13.2"
-androidx-test-junit-ext = "androidx.test.ext:junit:1.1.5"
-androidx-test-espresso-core = "androidx.test.espresso:espresso-core:3.5.1"
+androidx-test-junit-ext = "androidx.test.ext:junit:1.2.1"
+androidx-test-espresso-core = "androidx.test.espresso:espresso-core:3.6.1"
 
 hilt-core = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
+
+kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-guava = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-guava", version.ref = "kotlinx-coroutines" }
@@ -63,6 +64,6 @@ toasty = "com.github.GrenderG:Toasty:1.5.2"
 android-application = { id = "com.android.application", version = "8.3.2" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
-kotlin-ksp = { id = "com.google.devtools.ksp", version = "1.9.23-1.0.20" }
+kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kotlin-ksp = { id = "com.google.devtools.ksp", version = "2.0.0-1.0.21" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
